# strusWikipediaSearch

./: .gitignore  CHANGELOG  CMakeLists.txt  COPYING  INSTALL  INSTALL.3rdParty  INSTALL.Ubuntu.md  LICENSE.3rdParty  LICENSEHDR  README  README.md  TODO  changeLicense.pl
.Attic/client/: evalQuery.php  searchlink_html.tpl  strusDymServer.py  strusHttpServer_dymserver.py
.Attic/scripts/: initMetaData.sh  install_php_bindings.sh  stressTestQuery2.sh  stressTestQuery3.sh  stressTestQuery4.sh  strusnlp.py
.Attic/src/wikimediaToXml/: unused.cpp
benchmarks/parallelQueries/: dfcurve.pg  stress_BM25.calcdfs.sh  stress_BM25.sh  stress_BM25.wordlist.txt  stress_BM25_I.sh  stress_BM25_J.sh  stress_BM25_K.sh  stress_BM25_L.sh  stress_BM25_M.sh  stress_BM25_N.sh  stress_BM25_O.sh  stress_BM25_P.sh  stress_BM25pff.calcdfs.sh  stress_BM25pff.sh  stress_BM25pff.wordlist.txt  stress_BM25pff_A.sh  stress_BM25pff_B.sh  stress_BM25pff_C.sh  stress_BM25pff_D.sh  stress_BM25pff_E.sh  stress_BM25pff_F.sh  stress_BM25pff_G.sh  stress_BM25pff_H.sh
client/: error503.html  evalQuery.php  evalQuery_dyndns.php  evalQuery_euroserver.php  index.html  robots.txt  search.html.tpl  searchResultExample.html  search_base_html.tpl  search_bm25_html.tpl  search_documents_html.tpl  search_dym_html.tpl  search_error.html.tpl  search_error_html.tpl  search_html.tpl  search_nblnk_html.tpl  search_resultlist_html.tpl  show_evalQuery.php  startpage.html  strus.css  strus.html  strus.php  strusDymServer.py  strusHttpServer.py  strusIR.py  strusMessage.py  strusQueryAnalyzeServer.py  strusServer.py  strusStatisticsServer.py  strusStorageServer.py  utils.py
cmake/: boost.cmake  build_rules.cmake
config/: config.js.in  doc.ana  doc.json  dym.ana  istorage.json.in  metatable.txt  qryanalyzer.json.in  query.ana  query.eva  query.qln  statserver.json.in  storage.conf  vsm.conf  vstorage.json.in  wikipedia.ana  wikipedia_concepts.ana  wikipedia_links.ana  wikipedia_pageweight.ana  word2vecInput.ana
config.old/: linkquery.eva  linkquery.qln  query.ana  query.eva  wikipedia_concepts.ana  wikipedia_links.ana  wikipedia_nlp.ana
doc/: wikipediaSearch.htm  wikipediaSearchNuc.htm  wikipediaSearchQueryBenchmark.htm
doc/webpage/: buildStrusWikipediaSearch.html  exampleXML.xml  wikipediaExampleXML.html  wikipediaExampleXML_POS.html  wikipediaExampleXML_POS.xml  wikipediaPosTagging.html  wikipediaToXML.html  wikipediaTotalResumeXML.html
examples/: INSERT_contentstats.sh  POST_contentstats_transaction.sh  PUT_contentstats.sh  contentstats.json  query.plain.json  servername.sh.inc
html/: strus.css  strus.html
php/: collectionStats.php  evalQuery.php  phpinfo.php
resources/: Verblist.txt  irregular_verbs_en.txt  pattern_conceptfeat_doc.txt  pattern_forwardfeat_doc.txt  pattern_searchfeat_doc.txt
resources/scripts/: verbdump.pl
scripts/: buildstorages.sh  buildword2vec.sh  calcDocidRefs.pl  calcWeights.pl  checkinsert.sh  cleanupDym.pl  createConceptRules.pl  createConceptRules.sh  createDymDocuments.sh  createFeatureRules.pl  createTitleRules.pl  download.sh  elimDictDuplicates.pl  filtervectok.py  generateRandomQueries.sh  getAllDymSegments.sh  getDymSegments.sh  getRandomQueries.pl  getSampleDocuments.sh  initMetaData.sh  initMetaData_3.sh  initMetaData_eurohp1.sh  insert.sh  install.sh  install_2018_6.sh  install_data.sh  install_php_apache.sh  install_syntaxnet.notes.txt  linkdump.sh  mergeWeights.pl  nlpclean.sh  nlpdump.sh  packfiles.sh  partialInsert1.sh  partialInsert2.sh  partialInsert3.sh  partialInsert4.sh  prepareWord2Vec.sh  removeDymDuplicates.pl  reverseKeyValueOrder.pl  (+9 more)
scripts.old/: buildword2vec.sh  countTerms.pl  createTitleRules.pl  download.sh  install_deps.sh  install_php_nginx.sh  nlpclean.sh  nlpdump.sh  testQuery.sh
scripts/euroserver/: createStorage.sh  dumpStats.sh  initMetaData.sh  insertDocuments.sh  install_php.sh  startup_server.sh  startup_server1.sh  startup_server2.sh
scripts/toimub/: createStorage.sh  initMetaData.sh  install_php.sh  partialInsert1.sh  partialInsert2.sh
src/: CMakeLists.txt
src/analyzer/: CMakeLists.txt  modstrus_analyzer_wikipedia_search.cpp  tokenizers.cpp  tokenizers.hpp
src/gcc_hack/: gcc_wrapper.c
src/modules/: CMakeLists.txt  errorUtils.hpp  libstrus_module_normalizer_entityid.cpp  modstrus_normalizer_entityid.cpp
src/storage/: CMakeLists.txt  fixedSizeStructAllocator.hpp  modstrus_storage_wikipedia_search.cpp  strusPatchIndexTitle.cpp  weighting.cpp  weighting.hpp  weightingBM25_dpfc.cpp  weightingBM25_dpfc.hpp
src/wikimediaToXml/: CMakeLists.txt  documentStructure.cpp  documentStructure.hpp  inputStream.cpp  inputStream.hpp  linkMap.cpp  linkMap.hpp  outputString.cpp  outputString.hpp  strusWikimediaToXml.cpp  validateXml.cpp  wikimediaLexer.cpp  wikimediaLexer.hpp
tests/: CMakeLists.txt
tests/nlp/: complex.expect.txt  complex.input.txt  simple.expect.txt  simple.input.txt  simple_raw.expect.txt  testall.sh
tests/wikimediaTables/: CMakeLists.txt  EXP  EXP_I  input.xml
tests/wikimediaToXML/: CMakeLists.txt  EXP
tests/wikimediaToXml/: CMakeLists.txt  EXP  EXP_I  input.xml
tests/wikimediaToXml2/: CMakeLists.txt  EXP  EXP_I  United_States_presidential_election_1852.txt
tests/wikimediaToXml3/: CMakeLists.txt  David_Bowie.txt  EXP
tests/wikimediaToXml4/: 1844_United_States_presidential_election.txt  CMakeLists.txt  EXP
tests/wikimediaToXml5/: CMakeLists.txt  EXP  Faraday_cage.txt
